--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -6,6 +6,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (min-width: 768px) {
+    margin: 24px 40px;
+    margin-bottom: 0;
+  }
 }
 
 // logo
