--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -7,6 +7,8 @@ header {
   justify-content: space-between;
   align-items: center;
 
+  visibility: hidden;
+
   @media screen and (min-width: 768px) {
     margin: 24px 40px;
     margin-bottom: 0;
