Tablet version: Hero section completed

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,4 +27,17 @@ ul {
   list-style-type: none;
 }
 
+// Utilities
 
+.d-m {
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.d-t {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+}
