Desktop version: Completed

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -40,4 +40,15 @@ ul {
   @media screen and (min-width: 768px) {
     display: block;
   }
+
+  @media screen and (min-width: 1200px) {
+    display: none;
+  }
+}
+
+.d-d {
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
