--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -8,6 +8,10 @@
 
     padding: 0 81px 0px 39px;
   }
+
+  @media screen and (min-width: 1200px) {
+    padding: 0px 219px 0px 165px;
+  }
 }
 
 // hero text part
@@ -31,6 +35,13 @@
 
     max-width: 700px;
   }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 467px;
+    flex: unset;
+
+    margin-top: 178px;
+  }
 }
 
 h1 {
@@ -39,6 +50,11 @@ h1 {
   line-height: 50px;
 
   color: #13183f;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 56px;
+    line-height: 71px;
+  }
 }
 
 .hero__p {
@@ -52,6 +68,15 @@ h1 {
 
   @media screen and (min-width: 768px) {
     margin-top: 25px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 18px;
+    line-height: 28px;
+
+    margin-top: 29px;
+
+    max-width: 438px;
   }
 }
 
@@ -72,6 +97,14 @@ h1 {
   border-radius: 31.5px;
 
   cursor: pointer;
+
+  @media screen and (min-width: 1200px) {
+    height: 63px;
+    font-size: 18px;
+    line-height: 28px;
+
+    margin-top: 40px;
+  }
 }
 
 // hero illustration part
@@ -111,6 +144,12 @@ h1 {
     width: 216.54px;
     margin-left: auto;
   }
+
+  @media screen and (min-width: 1200px) {
+    width: 317px;
+
+    margin-top: 86px;
+  }
 }
 
 // the two boxes which are with the image
@@ -127,6 +166,14 @@ h1 {
   @media screen and (min-width: 768px) {
     top: -14px;
     right: -51px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    top: 103px;
+    right: -118px;
+    padding: 20px 57px 19px 24px;
+
+    width: 155px;
   }
 }
 
@@ -159,6 +206,13 @@ h1 {
   @media screen and (min-width: 768px) {
     bottom: -37px;
     left: -45px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 20px 72px 19px 24px;
+    left: -120px;
+    bottom: 98px;
+    width: 199px;
   }
 }
 
