Make hero section content centered between the following sizes: 425px and 768px

--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -21,8 +21,11 @@
   max-width: 420px;
 
   margin: 0 auto;
+  
 
-  text-align: center;
+  @media screen and (min-width: 426px) {
+    text-align: center;
+  }
 
   @media screen and (min-width: 768px) {
     text-align: left;
