--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -109,13 +109,32 @@ h1 {
     margin-top: 40px;
   }
 
-  &:hover {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+    border-radius: 31.5px;
+
+    opacity: 0;
+
+    transition: opacity 0.4s;
+
+    z-index: -1;
+
     background: linear-gradient(
         0deg,
         rgba(255, 255, 255, 0.5),
         rgba(255, 255, 255, 0.5)
       ),
       linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%);
+  }
+
+  &:hover:before {
+    opacity: 1;
   }
 }
 
