Mobile Version: Popular Courses Section Completed

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -12,7 +12,8 @@ html,
 
 body {
   font-family: "Plus Jakarta Sans", Arial, Helvetica, sans-serif;
-}
+
+  background: linear-gradient(180deg, #FFFFFF 0%, #F0F1FF 100%);}
 
 img {
   max-width: 100%;
