--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -13,7 +13,8 @@ html,
 body {
   font-family: "Plus Jakarta Sans", Arial, Helvetica, sans-serif;
 
-  background: linear-gradient(180deg, #FFFFFF 0%, #F0F1FF 100%);}
+  background: linear-gradient(180deg, #ffffff 0%, #f0f1ff 100%);
+}
 
 img {
   max-width: 100%;
