--- a/src/scss/popular-courses.scss
+++ b/src/scss/popular-courses.scss
@@ -26,9 +26,11 @@
 
 // courses boxes
 .ppc__box {
+  margin: 0 auto;
   margin-top: 40px;
 
   height: 259px;
+  width: 343px;
 
   background: #ffffff;
   box-shadow: 0px 25px 50px rgba(6, 22, 141, 0.0442381);
