--- a/src/scss/popular-courses.scss
+++ b/src/scss/popular-courses.scss
@@ -2,6 +2,8 @@
   margin-top: 66px;
   padding: 0 16px;
 
+  visibility: hidden;
+
   @media screen and (min-width: 768px) {
     margin-top: 99px;
     padding: 0px 40px 0px 39px;
