--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -7,6 +7,10 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (min-width: 768px) {
+    padding: 36px 39px 36px 40px;
+  }
 }
 
 .footer__logo__text {
