--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -38,4 +38,33 @@ footer {
   color: #ffffff;
 
   cursor: pointer;
+
+  position: relative;
+  z-index: 1;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    opacity: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.5),
+        rgba(255, 255, 255, 0.5)
+      ),
+      linear-gradient(180deg, #4851ff -54.32%, #f02aa6 100%);
+
+    transition: opacity 0.4s;
+
+    border-radius: 28px;
+  }
+
+  &:hover::before {
+    opacity: 1;
+  }
 }
