--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,6 +14,9 @@ body {
   font-family: "Plus Jakarta Sans", Arial, Helvetica, sans-serif;
 
   background: linear-gradient(180deg, #ffffff 0%, #f0f1ff 100%);
+
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 img {
