--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -8,6 +8,8 @@ footer {
   justify-content: space-between;
   align-items: center;
 
+  visibility: hidden;
+
   @media screen and (min-width: 768px) {
     padding: 36px 39px 36px 40px;
   }
