Make the footer button's background match the design for desktop size

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -87,5 +87,7 @@ footer {
     line-height: 28px;
 
     padding: 14px 31px 14px 31px;
+
+    background: linear-gradient(180deg, #4851FF -54.32%, #F02AA6 100%);
   }
 }
