--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,6 +17,10 @@ body {
 
   max-width: 1440px;
   margin: 0 auto;
+
+  @media screen and (min-width: 768px) {
+    background: #FFFFFF;
+  }
 }
 
 img {
