--- a/src/scss/popular-courses.scss
+++ b/src/scss/popular-courses.scss
@@ -2,17 +2,25 @@
   margin-top: 66px;
   padding: 0 16px;
 
+  padding-bottom: 80px;
+
   visibility: hidden;
+
+  background: linear-gradient(180deg, #ffffff 0%, #f0f1ff 100%);
 
   @media screen and (min-width: 768px) {
     margin-top: 99px;
     padding: 0px 40px 0px 39px;
+
+    padding-bottom: 86px;
   }
 
   @media screen and (min-width: 1200px) {
     padding: 0px 165px;
 
     margin-top: 134px;
+
+    padding-bottom: 140px;
   }
 }
 
